--- a/module/Makefile
+++ b/module/Makefile
@@ -1,10 +1,10 @@
 ifneq ($(KERNELRELEASE),)
 obj-m += kercli.o
 else
-  #KERNELDIR ?=/lib/modules/$(shell uname -r)/build
-  KERNELDIR ?=/home/mike/kers/linux-4.2.3
+#KERNELDIR ?=/lib/modules/$(shell uname -r)/build
+KERNELDIR ?=/home/mike/kers/linux-4.2.3
+PWD := $(shell pwd)
 
-  
 all:
 	make -C $(KERNELDIR) M=$(PWD) modules
 
